src/objects/BDM_Seller_1_2_1_form__c.object
<CustomObject>
    <description>This 1-2-1 form is to be used by BDM&apos;s and HPP Specialists in preparation for their monthly 1-2-1 with their line manager</description>
    <fields>
        <fullName>Actions_from_Previous_1_2_1__c</fullName>
        <inlineHelpText>Please enter all agreed actions from your preious 1-2-1</inlineHelpText>
        <label>Actions from Previous 1-2-1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agreed_Actions_development__c</fullName>
        <label>Agreed Actions development</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BTL_Apps_Written_to_Target__c</fullName>
        <formula>BTL_Value_Applications_Written__c / BTL_Value_Applications_Written_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BTL Apps Written % to Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BTL_Drawdown_to_Target__c</fullName>
        <formula>BTL_Value_Application_Drawdowns__c / BTL_Value_Application_Drawdowns_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BTL Drawdown % to Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BTL_Sanctioned_to_Target__c</fullName>
        <formula>BTl_Value_Applications_Sanctioned__c / BTL_Value_Applications_Sanctioned_target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BTL Sanctioned % to Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BTL_Submitted_to_Target__c</fullName>
        <formula>BTL_Value_Applications_Submitted__c / BTL_Value_Applications_Submitted_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BTL Submitted % to Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BTL_Value_AIP_s__c</fullName>
        <label>BTL Value AIP&apos;s</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BTL_Value_Application_Drawdowns_Target__c</fullName>
        <label>BTL Value Application Drawdowns Target</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BTL_Value_Application_Drawdowns__c</fullName>
        <label>BTL Value Application Drawdowns</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BTL_Value_Applications_Sanctioned_target__c</fullName>
        <label>BTL Value Applications Sanctioned target</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BTL_Value_Applications_Submitted_Target__c</fullName>
        <label>BTL Value Applications Submitted Target</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BTL_Value_Applications_Submitted__c</fullName>
        <label>BTL Value Applications Submitted</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BTL_Value_Applications_Written_Target__c</fullName>
        <label>BTL Value Applications Written Target</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BTL_Value_Applications_Written__c</fullName>
        <label>BTL Value Applications Written</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BTL_Value_Opps_Branch_Agency__c</fullName>
        <label>BTL Value Opps (Branch/Agency)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BTL_Value_Opps_Contact_Centre__c</fullName>
        <label>BTL Value Opps (Contact Centre)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BTL_Value_Opps_Self_generation__c</fullName>
        <label>BTL Value Opps (Self generation)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BTL_Value_Opps_Web_leads__c</fullName>
        <label>BTL Value Opps (Web leads)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BTL_Value_Opps_intermediary__c</fullName>
        <label>BTL Value Opps (intermediary)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BTL_Volume_AIP_s_Target__c</fullName>
        <label>BTL Volume AIP&apos;s Target</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTL_Volume_AIP_s__c</fullName>
        <label>BTL Volume AIP&apos;s</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTL_Volume_Applications_Sanctioned__c</fullName>
        <label>BTL Volume Applications Sanctioned</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTL_Volume_Applications_Submitted__c</fullName>
        <label>BTL Volume Applications Submitted</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTL_Volume_Applications_Written__c</fullName>
        <label>BTL Volume Applications Written</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTL_Volume_Opps_Branch_Agency__c</fullName>
        <label>BTL Volume Opps (Branch/Agency)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTL_Volume_Opps_Contact_Centre__c</fullName>
        <label>BTL Volume Opps (Contact Centre)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTL_Volume_Opps_Self_generation__c</fullName>
        <label>BTL Volume Opps (Self generation)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTL_Volume_Opps_Web_leads__c</fullName>
        <label>BTL Volume Opps (Web leads)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTL_Volume_Opps_intermediary__c</fullName>
        <label>BTL Volume Opps (intermediary)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTL_volume_Application_Drawdowns__c</fullName>
        <label>BTL volume Application Drawdowns</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTl_Value_Applications_Sanctioned__c</fullName>
        <label>BTl Value Applications Sanctioned</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPF_Drawdown_to_Target__c</fullName>
        <formula>CPF_Value_Application_Drawdowns__c / CPF_Value_Application_Drawdowns_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPF Drawdown % to Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CPF_Sanctioned_to_Target__c</fullName>
        <formula>CPF_Value_Applications_Sanctioned__c / CPF_Value_Applications_Sanctioned_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPF Sanctioned % to Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CPF_Submitted_to_Target__c</fullName>
        <formula>CPF_Value_Applications_Submitted__c / CPF_Value_Applications_Submitted_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPF Submitted % to Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CPF_Value_AIP_s__c</fullName>
        <label>CPF Value AIP&apos;s</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPF_Value_Application_Drawdowns_Target__c</fullName>
        <label>CPF Value Application Drawdowns Target</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPF_Value_Application_Drawdowns__c</fullName>
        <label>CPF Value Application Drawdowns</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPF_Value_Applications_Sanctioned_Target__c</fullName>
        <label>CPF Value Applications Sanctioned Target</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPF_Value_Applications_Sanctioned__c</fullName>
        <label>CPF Value Applications Sanctioned</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPF_Value_Applications_Submitted_Target__c</fullName>
        <label>CPF Value Applications Submitted Target</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPF_Value_Applications_Submitted__c</fullName>
        <label>CPF Value Applications Submitted</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPF_Value_Applications_Written__c</fullName>
        <label>CPF Value Applications Written</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPF_Value_Applications_Written_target__c</fullName>
        <label>CPF Value Applications Written target</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPF_Value_Opps_Branch_Agency__c</fullName>
        <label>CPF Value Opps (Branch/Agency)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPF_Value_Opps_Contact_Centre__c</fullName>
        <label>CPF Value Opps (Contact Centre)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPF_Value_Opps_Intermediary__c</fullName>
        <label>CPF Value Opps (Intermediary)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPF_Value_Opps_Self_generation__c</fullName>
        <label>CPF Value Opps (Self generation)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPF_Value_Opps_Web_leads__c</fullName>
        <label>CPF Value Opps (Web leads)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPF_Volume_AIP_s__c</fullName>
        <label>CPF Volume AIP&apos;s</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPF_Volume_Aip_s_Target__c</fullName>
        <label>CPF Volume Aip&apos;s Target</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPF_Volume_Applications_Sanctioned__c</fullName>
        <label>CPF Volume Applications Sanctioned</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPF_Volume_Applications_Written__c</fullName>
        <label>CPF Volume Applications Written</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPF_Volume_Opps_Contact_Centre__c</fullName>
        <label>CPF Volume Opps (Contact Centre)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPF_Volume_Opps_Intermediary__c</fullName>
        <label>CPF Volume Opps (Intermediary)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPF_Volume_Opps_Self_generation__c</fullName>
        <label>CPF Volume Opps (Self generation)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPF_Volume_Opps_Web_leads__c</fullName>
        <label>CPF Volume Opps (Web leads)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPF_Volume_application_Drawdowns__c</fullName>
        <label>CPF Volume application Drawdowns</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPF_Volume_of_Applications_Submitted__c</fullName>
        <label>CPF Volume of Applications Submitted</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPF_Volume_opps_Branch_agency__c</fullName>
        <inlineHelpText>Enter the number of CPF opportunities provided by the branch /agency</inlineHelpText>
        <label>CPF Volume opps (Branch/agency)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPF_Written_to_Target__c</fullName>
        <formula>CPF_Value_Applications_Written__c / CPF_Value_Applications_Written_target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPF Written % to Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Compliance_Checks__c</fullName>
        <inlineHelpText>Commentary on compliance checks for the month</inlineHelpText>
        <label>Compliance Checks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Compliance_rating_for_Month__c</fullName>
        <inlineHelpText>please enter the Compliance rating from compliance observation for the month</inlineHelpText>
        <label>Compliance rating for Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Compliant</fullName>
                </value>
                <value>
                    <fullName>Non Compliant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_1_2_1_conducted__c</fullName>
        <label>Date 1-2-1 conducted</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HPP_AIP_to_Target__c</fullName>
        <label>HPP AIP Target</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HPP_Applications_to_target__c</fullName>
        <formula>HPP_Value_Applications_Written__c / HPP_Value_Applications_Written_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HPP Applications % to target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HPP_Drawdown_to_Target__c</fullName>
        <formula>HPP_Value_Application_Drawdowns__c / HPP_Value_Application_Drwadowns_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HPP Drawdown % to Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HPP_Sanctioned_to_Target__c</fullName>
        <formula>HPP_Value_Applications_Sanctioned__c /  HPP_Value_Applications_Sanctioned_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HPP Sanctioned % to Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HPP_Submitted_to_Target__c</fullName>
        <formula>HPP_Value_Applications_Submitted__c / HPP_Value_Applications_Submitted_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HPP Submitted % to Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HPP_Value_AIP_s__c</fullName>
        <label>HPP Value AIP&apos;s</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPP_Value_Application_Drawdowns__c</fullName>
        <label>HPP Value Application Drawdowns</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPP_Value_Application_Drwadowns_Target__c</fullName>
        <label>HPP Value Application Drwadowns Target</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPP_Value_Applications_Sanctioned_Target__c</fullName>
        <label>HPP Value Applications Sanctioned Target</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPP_Value_Applications_Sanctioned__c</fullName>
        <label>HPP Value Applications Sanctioned</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPP_Value_Applications_Submitted_Target__c</fullName>
        <label>HPP Value Applications Submitted Target</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPP_Value_Applications_Submitted__c</fullName>
        <label>HPP Value Applications Submitted</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPP_Value_Applications_Written_Target__c</fullName>
        <label>HPP Value Applications Written Target</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPP_Value_Applications_Written__c</fullName>
        <label>HPP Value Applications Written</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPP_Value_Opps_Branch_Agency__c</fullName>
        <label>HPP Value Opps (Branch/Agency)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPP_Value_Opps_Contact_Centre__c</fullName>
        <label>HPP Value Opps (Contact Centre)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPP_Value_Opps_Intermediary__c</fullName>
        <label>HPP Value Opps (Intermediary)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPP_Value_Opps_Self_generation__c</fullName>
        <label>HPP Value Opps (Self generation)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPP_Value_Opps_Web_Leads__c</fullName>
        <label>HPP Value Opps (Web Leads)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPP_Volume_AIP_s__c</fullName>
        <label>HPP Volume AIP&apos;s</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HPP_Volume_Application_Drawdowns__c</fullName>
        <label>HPP Volume Application Drawdowns</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HPP_Volume_Applications_Submitted__c</fullName>
        <label>HPP Volume Applications Submitted</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HPP_Volume_Applications_Written__c</fullName>
        <label>HPP Volume Applications Written</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HPP_Volume_Opps_Branch_Agency__c</fullName>
        <inlineHelpText>Please enter the volume of HPP opportunites received from the Branch/Agency</inlineHelpText>
        <label>HPP Volume Opps (Branch/Agency)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HPP_Volume_Opps_Contact_Centre__c</fullName>
        <label>HPP Volume Opps (Contact Centre)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HPP_Volume_Opps_Intermediary__c</fullName>
        <label>HPP Volume Opps (Intermediary)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HPP_Volume_Opps_Self_generation__c</fullName>
        <label>HPP Volume Opps (Self generation)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HPP_Volume_Opps_Web_leads__c</fullName>
        <label>HPP Volume Opps (Web leads)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hpp_Volume_Applications_Sanctioned__c</fullName>
        <label>Hpp Volume Applications Sanctioned</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LTS_Referrals_Value_Opps__c</fullName>
        <label>LTS Referrals Value Opps</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LTS_Referrals_Volume_Opps__c</fullName>
        <label>LTS Referrals Volume Opps</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_Manager_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Please enter the line managers name</description>
        <label>Line Manager Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BDM_HPP_Seller_1_2_1_Form</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Managers_Comments_on_Review_Period__c</fullName>
        <label>Managers Comments on Review Period</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_Days_Sickness__c</fullName>
        <label>No. Days Sickness</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Occasions_Lateness__c</fullName>
        <label>No. Occasions Lateness</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Upheld_Complaints_Individual__c</fullName>
        <label>No. Upheld Complaints (Individual)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Complaints_against_individual__c</fullName>
        <label>No. of Complaints against individual</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Performance_Month_reviewed__c</fullName>
        <description>Month of review</description>
        <label>Performance Month reviewed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
                <value>
                    <fullName>January 2016</fullName>
                </value>
                <value>
                    <fullName>February 2016</fullName>
                </value>
                <value>
                    <fullName>March 2016</fullName>
                </value>
                <value>
                    <fullName>April 2016</fullName>
                </value>
                <value>
                    <fullName>May 2016</fullName>
                </value>
                <value>
                    <fullName>June 2016</fullName>
                </value>
                <value>
                    <fullName>July 2016</fullName>
                </value>
                <value>
                    <fullName>August 2016</fullName>
                </value>
                <value>
                    <fullName>September 2016</fullName>
                </value>
                <value>
                    <fullName>October 2016</fullName>
                </value>
                <value>
                    <fullName>November 2016</fullName>
                </value>
                <value>
                    <fullName>December 2016</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>please enter the staff members name whom this form relates to</description>
        <label>Person</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>BDM/HPP Seller 1-2-1 Form</relationshipLabel>
        <relationshipName>BDM_HPP_Seller_1_2_1_Form</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regulatory_Training_Result__c</fullName>
        <label>Regulatory Training Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regulatory_Training_completed__c</fullName>
        <inlineHelpText>Please enter details of any regulated training completed this month</inlineHelpText>
        <label>Regulatory Training completed</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regulatory_training_Completion_Date__c</fullName>
        <label>Regulatory training Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Specific_Development_Training__c</fullName>
        <label>Specific Development/Training</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Members_Role__c</fullName>
        <description>Select your role</description>
        <inlineHelpText>Select your role</inlineHelpText>
        <label>Staff Members Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HPP Specialist</fullName>
                </value>
                <value>
                    <fullName>BDM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Staff_Members_comments_on_review_period__c</fullName>
        <label>Staff Members comments on review period</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_Could_have_gone_better__c</fullName>
        <inlineHelpText>Please enter details of what could have gone better during the review period</inlineHelpText>
        <label>What Could have gone better</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_went_well_during_the_review_period__c</fullName>
        <label>What went well during the review period</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1_2_1_Form_approved__c</fullName>
        <description>Approval date for 1-2-1 by line manager</description>
        <label>1-2-1 Form approved</label>
        <type>Date</type>
    </fields>
    <label>BDM/Seller 1-2-1 form</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>BDM/Seller 1-2-1 form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BDM/HPP Seller 1-2-1 Form</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>